testdata/ttcn3-conformance-tests/ATS/core_language/06_types_and_values/0602_structured_types_and_values/0602_toplevel/NegSyn_0602_TopLevel_004.ttcn
/***************************************************
 ** @author   STF 521
 ** @version  0.0.1
 ** @purpose  1:6.2, Combined value list and assignment notation not allowed in the same (immediate) context.
 ** @verdict  pass reject
 ***************************************************/
/* The following requirements are tested:
 *The assignment notation can be used for record, record of, set, setof and union value
 * notations and for arrays. In this notation each field shall not appear more than once.
*/

module NegSyn_0602_TopLevel_004 {
    type record MyRecord {
        integer field1,
        charstring field2 optional,
        float field3
    }
    const MyRecord c_rec := {
        field1 := 5,
        field1 := 6,    // error: already appeared field
        field3 := 3.14
    };
}